# libgphoto2

./: .cirrus.yml  .cvsignore  .editorconfig  .gitignore  .travis-before-install  .travis-script.sh  .travis-translate-pkgs  .travis.yml  ABOUT-NLS  AUTHORS  CHANGELOG.md  CHANGES  CMakeLists.txt  COPYING  ChangeLog  DAEMON  HACKING  HACKING.md  INSTALL  MAINTAINERS  Makefile.am  NEWS  NOTES  OUTDATED.txt  OVERVIEW  README  README.in  README.md  README.packaging  RELEASE-HOWTO.md  SECURITY.md  TESTERS  TODO  abilities-list.c  abilities.c  acconfig.h  autogen.sh  bayer.c  bayer.h  build.sh  (+72 more)
bindings/: Makefile.am
bindings/csharp/: AssemblyInfo.cs  AssemblyInfo.cs.in  Camera.cs  CameraAbilitiesList.cs  CameraFile.cs  CameraFilesystem.cs  CameraList.cs  CameraWidget.cs  Context.cs  ErrorCodes.cs  Makefile.am  Object.cs  Port.cs  PortInfo.cs  PortInfoList.cs  README  TestGphoto2Sharp  TestGphoto2Sharp.cs  check-camera-list.in  check-camera-list.sh.in  check-sizes.in  check-sizes.sh.in  libgphoto2-sharp.dll.config  libgphoto2-sharp.pc.in  testsizes-createsource.sh  testsizes-typelist.txt
bindings/java/: Makefile.am  README  TODO  gphoto2.i  javatest.java.in  make-clean.sh  make-swig-java.sh
bindings/python/: INSTALL  Makefile.am  README  TODO  ctypes_gphoto2.py  gphoto2.c  gphoto2.pyx  gptest.py  setup.py  setup.py.in  test-gp.py  test_ctypes_gphoto2.py
camlibs/: CONFIG_DIALOG  Makefile.am  NOTES  camlib.sym  makefile.os2  meson.build
camlibs/adc65/: Changelog  Makefile-files  Makefile.am  README.adc65  TODO  adc65.c  adc65.h  library.c  meson.build
camlibs/agfa/: Makefile.am  README  agfa.c  agfa.h  commands.c
camlibs/agfa-cl18/: Makefile.am  README  agfa.c  agfa.df  agfa.h  commands.c  commands.h  usb.c
camlibs/agfa-cl20/: ChangeLog  Makefile-files  Makefile.am  RANDOM  STATUS  agfa_cl20.c  commands.txt  meson.build  pic-header.txt  protocol.txt  protocol2.txt
camlibs/aox/: ChangeLog  Makefile-files  Makefile.am  README  README.aox  aox.c  aox.h  library.c  meson.build
camlibs/ax203/: Makefile-files  README.ax203  README.ax203-compression  ax203.c  ax203.h  ax203_compress_jpeg.c  ax203_decode_yuv.c  ax203_decode_yuv_delta.c  jidctflt.c  jpeg_memsrcdest.c  jpeg_memsrcdest.h  library.c  meson.build  tinyjpeg-internal.h  tinyjpeg.c  tinyjpeg.h
camlibs/barbie/: ChangeLog  Makefile-files  Makefile.am  Protocol.txt  README.barbie  barbie.c  barbie.df  barbie.h  compile  library.c  main.c  makefile.os2  meson.build
camlibs/benq/: .cvsignore  ChangeLog  Makefile.am  README  benq.c  benq.h  library.c
camlibs/canon/: .cvsignore  .indent.pro  ChangeLog  Changelog  Makefile  Makefile-files  Makefile.am  Makefile.in  Protocol  README  README.canon  TODO  canon.c  canon.df  canon.h  crc.c  crc.h  g1.txt  library.c  library.h  makefile.os2  meson.build  mkpatch  psa50.c  psa50.h  serial.c  serial.h  urb-interpret  usb.c  usb.h  util.c  util.h
camlibs/casio/: .cvsignore  (+14 more)
doc/: .cvsignore  DAEMON  Doxyfile-internal.in  Doxyfile-internals.in  Doxyfile.in  FAQ  Makefile.am  README.apidocs  build_OS2.txt  camlib_devel-y.eps  camlib_devel.lyx  camlib_devel.sgml  camlib_devel.txt  docbook-xml.css  faq.xml  frontend_devel.lyx  frontend_devel.sgml  gphoto2-cli.txt  gphoto2.1  gphoto2.3  gphoto2.txt  gphoto2.xml  gphoto2_port.3  libgphoto2.3  libgphoto2_port.3  meson.build
examples/: Makefile.am  README  autodetect.c  best-iso.c  config.c  context.c  focus.c  foo.c  lunkwill-canon-capture.c  meson.build  preview.c  sample-afl.c  sample-autodetect.c  sample-capture.c  sample-justfocus.c  sample-libfuzz.c  sample-multi-detect.c  sample-owner.c  sample-photobooth.c  sample-tether.c  sample-trigger-capture.c  samples.h
gphoto-m4/: Makefile-files  Makefile.am  README.md  gp-byteorder.m4  gp-camlibs.m4  gp-check-doxygen.m4  gp-check-library.m4  gp-check-pendantic-compiler-flags.m4  gp-check-popt.m4  gp-documentation.m4  gp-driverdir.m4  gp-dynamic-libraries.m4  gp-gettext-hack.m4  gp-init.m4  gp-libjpeg.m4  gp-libltdl.m4  gp-manual-documentation.m4  gp-manual-graphviz.m4  gp-manual-gtk-doc.m4  gp-manual-pstoimg.m4  gp-packaging.m4  gp-pedantic-compiler-flags.m4  gp-progs.m4  gp-references.m4  gp-set.m4  gp-sleep.m4  gp-stdint.m4  gp-subpackage.m4  gp-udev.m4
include/: .cvsignore  Makefile.am  gphoto-core.h  gphoto-datatypes.h  gphoto2-abilities-list.h  gphoto2-abilities.h  gphoto2-camera.h  gphoto2-core.h  gphoto2-datatypes.h  gphoto2-debug.h  gphoto2-file.h  gphoto2-filesys.h  gphoto2-frontend.h  gphoto2-interface.h  gphoto2-library.h  gphoto2-list.h  gphoto2-lists.h  gphoto2-port.h  gphoto2-portability-os2.h  gphoto2-result.h  gphoto2-setting.h  gphoto2-settings.h  gphoto2-widget.h  gphoto2.h  gphotoos2.h
libexif/: .cvsignore  Makefile.am  exif-content.c  exif-content.h  exif-data.c  exif-data.h  exif-entry.c  exif-entry.h  exif-format.c  exif-format.h  exif-i18n.h  exif-result.h  exif-tag.c  exif-tag.h  exif-utils.c  exif-utils.h
libgphoto2/: .cvsignore  Makefile.am  TODO  abilities.c  ahd_bayer.c  ahd_bayer.h  bayer-types.h  bayer.c  bayer.h  camera.c  core.c  core.h  debug.c  exif.c  exif.h  file.c  filesys.c  frontend.c  fs.c  gamma.c  gamma.h  globals.h  gphoto2-abilities-list.c  gphoto2-abilities-list.h  gphoto2-abilities.h  gphoto2-camera.c  gphoto2-camera.h  gphoto2-context.c  gphoto2-context.h  gphoto2-core.h  gphoto2-debug.c  gphoto2-debug.h  gphoto2-endian.h.in  gphoto2-file.c  gphoto2-file.h  gphoto2-filesys.c  gphoto2-filesys.h  gphoto2-library.c  gphoto2-library.h  gphoto2-list.c  (+32 more)
libgphoto2_port/: .cvsignore  COPYING.LIB  ChangeLog  Makefile.am  NEWS  acconfig.h  autogen.sh  configure.ac  configure.in  gphoto2-port-config.in  gphoto2portConf.sh.in  iolib.sym  lgp2port.df  libgphoto2_port-uninstalled.pc.in  libgphoto2_port.pc.in  libgphoto2_port.spec.in  makefile.os2  meson.build
tests/: .cvsignore  Makefile.am  check-camera-list.in  check-camera-list.sh.in  meson.build  print-libgphoto2-version.c  test-camera-list.c  test-endian.c  test-filesys.c  test-gphoto2.c  test-i18n.c  test-init-localedir.c  test-pedantic-compilation.c  test-pedantic-compilation.cxx
(+1710 files in other folders)
